Repo // i18n: Fix Japanese translations regarding "import/export".
- Abusing loan words is not acceptable if equivalent native Japanese expressions are available.

--- a/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -1275,7 +1275,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "GIGF は「原神専用ガチャ記録交換用規格」の略称であり、UIGF v3.0 までの全てのバージョンの統括名前であり、全て廃止済みである。廃止された規格に準じたファイルをインポートする機能は、「このアプリによって生成された」古いバックアップ ファイルを読み込むだけのためである。"
+            "value" : "GIGF は「原神専用ガチャ記録交換用規格」の略称であり、UIGF v3.0 までの全てのバージョンの統括名前であり、全て廃止済みである。廃止された規格に準じたファイルを読み込む機能は、「このアプリによって生成された」古いバックアップ ファイルを読み込むだけのためである。"
           }
         },
         "ko" : {
