--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -7971,7 +7971,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "旧ピザ難民資料のエクスポートに失敗しました。"
+            "value" : "旧ピザ難民資料の書き出しに失敗しました。"
           }
         },
         "ko" : {
@@ -8048,7 +8048,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "旧ピザ難民資料を正常にエクスポートしました:"
+            "value" : "旧ピザ難民資料を正常に書き出されました:"
           }
         },
         "ko" : {
@@ -8125,7 +8125,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "旧ピザ難民資料は正常にエクスポートされました。"
+            "value" : "旧ピザ難民資料は正常に書き出されました。"
           }
         },
         "ko" : {
@@ -8277,7 +8277,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "エクスポート可能なデータ数"
+            "value" : "書き出し可能なデータ数"
           }
         },
         "ko" : {
@@ -8429,7 +8429,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "この画面右上のボタンをタップすると、エクスポート用データの準備が始まります。データの準備が完了すると、ファイルの保存先を選択するダイアログが表示されます。"
+            "value" : "この画面右上のボタンをタップすると、書き出し用データの準備が始まります。データの準備が完了すると、ファイルの保存先を選択するダイアログが表示されます。"
           }
         },
         "ko" : {
@@ -8505,7 +8505,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "現在ご利用中のデバイスのシステムバージョンは OS24（iOS 17 / macOS 14 / watchOS 10）未満のため、『ピザ助手(無印)』の現行サービス対象外となります。\n\n『原神ピザ助手』v4 までの二人の主要開発者は、それぞれのキャリアプランの都合で 2024 年に開発から離脱し、『崩スタピザ助手』の開発も中止されました。残った開発者が二つのアプリの保守を一人で担うのは過重であったため、両者を統合する「統一ピザエンジン」の開発を開始しました。これが 2024 年 11 月中旬から実装された『ピザ助手(無印)』v5 です。\n\n旧バージョンのシステムに組み込まれている SwiftUI フレームワークには、保守効率に大きく影響する多くの欠陥があるため、「統一ピザエンジン」では OS24（iOS 17、macOS 14、watchOS 10）を主なターゲットとする開発方針を採用しました。この世代で導入された Observable Macro フレームワークにより、フロントエンドはより細かなバックエンド情報の変化に素早く正確に対応できるようになり、旧来の Combine ベースの技術のように画面全体を一度に再描画することがなくなりました。旧技術では画面更新の遅延などの問題も発生し、ユーザー体験や開発体験を損なっていました。さらに OS24 で導入された SwiftData は、CoreData の長年のスレッド並行安全性問題を解決しています。「統一ピザエンジン」の開発全体を通じて Swift の最新の並行処理技術が活用されています。\n\n『原神ピザ助手』は v2.5.0 から「深境螺旋ランキング」（および関連する個人作戦報告アップロード機能）を OS21（iOS 14、macOS 11、watchOS 8）でサポートしていました。2024 年末に『ピザ助手(無印)』v5 が実装された後、法的配慮のため、「データ不収集」方針が採用され、2025 年夏には原神向け「深境螺旋ランキング」機能と個人作戦報告アップロード機能が削除されました。しかし、OS24 へアップグレードできない既存ユーザーにとっては重大な情報セキュリティリスクが残ります。ランキング専用サーバーの契約終了後も、旧バージョンのアプリがデータをアップロードし続ける可能性があり、そのサーバーの IP が新たな所有者の手に渡った場合、制御不能な情報流出リスクとなります。\n\nこの状況に対応するため、三人の開発者は『ピザ助手(無印)』v5 を OS21（iOS 14 など）向けにもビルドすることで合意しましたが、OS24 未満のシステムでは旧バージョンのアカウントデータやガチャ履歴のエクスポートのみを提供し、ユーザーが新しいデバイス（OS24 以降）でインポートできるようにします。\n\n『ピザ助手(無印)』v5 はデータ損失のリスクを冒してまで SwiftData を CoreData へダウングレードできないため、OS24 未満のシステムへのサポートは継続できません。FOSS（フリー・オープンソース・ソフトウェア）は無限の利用可能性や責任を意味しません。ご理解のほど、よろしくお願いいたします。"
+            "value" : "現在ご利用中のデバイスのシステムバージョンは OS24（iOS 17 / macOS 14 / watchOS 10）未満のため、『ピザ助手(無印)』の現行サービス対象外となります。\n\n『原神ピザ助手』v4 までの二人の主要開発者は、それぞれのキャリアプランの都合で 2024 年に開発から離脱し、『崩スタピザ助手』の開発も中止されました。残った開発者が二つのアプリの保守を一人で担うのは過重であったため、両者を統合する「統一ピザエンジン」の開発を開始しました。これが 2024 年 11 月中旬から実装された『ピザ助手(無印)』v5 です。\n\n旧バージョンのシステムに組み込まれている SwiftUI フレームワークには、保守効率に大きく影響する多くの欠陥があるため、「統一ピザエンジン」では OS24（iOS 17、macOS 14、watchOS 10）を主なターゲットとする開発方針を採用しました。この世代で導入された Observable Macro フレームワークにより、フロントエンドはより細かなバックエンド情報の変化に素早く正確に対応できるようになり、旧来の Combine ベースの技術のように画面全体を一度に再描画することがなくなりました。旧技術では画面更新の遅延などの問題も発生し、ユーザー体験や開発体験を損なっていました。さらに OS24 で導入された SwiftData は、CoreData の長年のスレッド並行安全性問題を解決しています。「統一ピザエンジン」の開発全体を通じて Swift の最新の並行処理技術が活用されています。\n\n『原神ピザ助手』は v2.5.0 から「深境螺旋ランキング」（および関連する個人作戦報告アップロード機能）を OS21（iOS 14、macOS 11、watchOS 8）でサポートしていました。2024 年末に『ピザ助手(無印)』v5 が実装された後、法的配慮のため、「データ不収集」方針が採用され、2025 年夏には原神向け「深境螺旋ランキング」機能と個人作戦報告アップロード機能が削除されました。しかし、OS24 へアップグレードできない既存ユーザーにとっては重大な情報セキュリティリスクが残ります。ランキング専用サーバーの契約終了後も、旧バージョンのアプリがデータをアップロードし続ける可能性があり、そのサーバーの IP が新たな所有者の手に渡った場合、制御不能な情報流出リスクとなります。\n\nこの状況に対応するため、三人の開発者は『ピザ助手(無印)』v5 を OS21（iOS 14 など）向けにもビルドすることで合意しましたが、OS24 未満のシステムでは旧バージョンのアカウントデータやガチャ履歴の書き出しのみを提供し、ユーザーが新しいデバイス（OS24 以降）で読み込めるようにします。\n\n『ピザ助手(無印)』v5 はデータ損失のリスクを冒してまで SwiftData を CoreData へダウングレードできないため、OS24 未満のシステムへのサポートは継続できません。FOSS（フリー・オープンソース・ソフトウェア）は無限の利用可能性や責任を意味しません。ご理解のほど、よろしくお願いいたします。"
           }
         },
         "ko" : {
@@ -8581,7 +8581,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "現時点ではエクスポート可能なローカルデータはありません。この画面はiCloudのバックグラウンドデータ更新を待っていますが、iOS 17以降ではすべてのiCloudデータを本アプリで引き継ぐことができます。"
+            "value" : "現時点では書き出し可能なローカルデータはありません。この画面はiCloudのバックグラウンドデータ更新を待っていますが、iOS 17以降ではすべてのiCloudデータを本アプリで引き継ぐことができます。"
           }
         },
         "ko" : {
@@ -13380,7 +13380,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "⚠️ 開発者から技術的なサポートを求めている間に行うように指示されない限り、この切り替えボタンを触らないでください。\n\n⚠️ この切り替えボタンを触る前に、ローカルのプロファイルをエクスポートしてください。"
+            "value" : "⚠️ 開発者から技術的なサポートを求めている間に行うように指示されない限り、この切り替えボタンを触らないでください。\n\n⚠️ この切り替えボタンを触る前に、ローカルのプロファイルをお書き出しください。"
           }
         },
         "ko" : {
