--- a/Packages/WallpaperKit/Sources/WallpaperConfigKit/Resources/Localizable.xcstrings
+++ b/Packages/WallpaperKit/Sources/WallpaperConfigKit/Resources/Localizable.xcstrings
@@ -1494,7 +1494,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "壁紙は最大10点まで。この制限はユーザー壁紙のパックをインポートすることで回避できる可能性がありますが、パフォーマンスに影響を与える可能性があることにご注意ください。"
+            "value" : "壁紙は最大10点まで。この制限はユーザー壁紙のパックを読み込むことで回避できる可能性がありますが、パフォーマンスに影響を与える可能性があることにご注意ください。"
           }
         },
         "ko" : {
