PZHelper // i18n fix (zh-Hant).

--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -8459,7 +8459,7 @@
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "您可以點擊本頁右上角的按鈕開始準備匯出資料。資料準備完成後，會彈出檔案匯出對話框，詢問您要將檔案儲存到哪裡。"
+            "value" : "您可以點按本頁右上角的按鈕開始準備匯出資料。資料準備完成後，會彈出檔案匯出對話框，詢問您要將檔案儲存到哪裡。"
           }
         }
       }
