AboutKit // Fix asset name mismatch for Pan93412.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
@@ -3728,7 +3728,7 @@
         }
       }
     },
-    "aboutKit.contributors.name.pan93412" : {
+    "aboutKit.contributors.name.panbystar" : {
       "localizations" : {
         "de" : {
           "stringUnit" : {
